# ayanami

./: CMakeLists.txt  README.md  aa_rect.cpp  aa_rect.h  aabb.h  ayanami.cpp  ayanami.h  bvh_node.cpp  bvh_node.h  camera.cpp  camera.h  checker_texture.cpp  checker_texture.h  dielectric.cpp  dielectric.h  fractal_noise.h  framebuffer.cpp  framebuffer.h  gl.h  hit_record.h  hitable.h  hitable_list.cpp  hitable_list.h  lambertian.cpp  lambertian.h  log.h  lua_env.cpp  lua_env.h  main.cpp  marble.h  material.h  metal.cpp  metal.h  nicemath.h  noise.h  perlin.cpp  perlin.h  perlin_mat.h  perlin_texture.h  random.cpp  (+13 more)
renders/: fog-procgen-textures.tga  random-scene.tga
scenes/: clearcoat_spheres.lua  cornell_box_sphere.lua  rand_scene.lua  rand_scene_lights.lua  textured_sphere.lua
